<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".MainActivity">

    <TextView
     style="@style/common"
        android:text="Intents Example.!"
        android:textSize="40sp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="160dp"
                 />

    <TextView
      style="@style/common_button"
        android:text="Explicti Intent!"
        android:textSize="30sp"
         />

    <EditText
        android:id="@+id/editTextTextPersonName"
      style="@style/common"
        android:inputType="textPersonName"
        android:text="Name"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/editTextTextPersonName2"
        style="@style/common"
        android:layout_margin="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="password" />

    <Button
        android:id="@+id/button_login"
style="@style/common_button"
        android:text="Login"
        android:onClick="login"/>
    <Button
        android:id="@+id/button_register"
        style="@style/common_button"
        android:text="Register"
        android:onClick="register"/>
</LinearLayout>