<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:layout_margin="10dp"

    tools:context=".RegisterActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/boarder"
    >
    <TextView
        android:id="@+id/textView"
      style="@style/common_button"
        android:textSize="30sp"
        android:text="Register/Login Page..!\nExplicit Intent" />

    <EditText
        android:id="@+id/editText_reg"
        style="@style/common"

        android:inputType="textPersonName"
        android:hint="Name"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/editText_pass_reg"
        style="@style/common"
        android:layout_margin="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="password" />

    <Button
        android:id="@+id/button_login"
        style="@style/common_button"
        android:text="Save"
        android:onClick="saveAndContinoue"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/boarder"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/common_button"
            android:textSize="30dp"
            android:text="Share Text \nImplicit Intent "/>

        <EditText
            android:id="@+id/editTextTextPersonName3"
            style="@style/common"
            android:layout_margin="10dp"
            android:inputType="textPersonName"
            android:hint="Url" />

        <Button
            android:id="@+id/button"
          style="@style/common_button"
            android:text="Share"
            android:onClick="openWeb"/>

    </LinearLayout>

</LinearLayout>